--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="main_div">
         <div class="canvas"></div>
         <div class="controls">
-            <button>-</button>
-            <button>5</button>
-            <button>+</button>
-            <button><input type="color"></button>
-            <button>X</button>
+            <button class="decrease">-</button>
+            <button class="sizetext">5</button>
+            <button class="increase">+</button>
+            <button for="color" class="color"><input type="color" id="color" name="color"></button>
+            <button class="clear">X</button>
         </div>
     </div>
 </body>
