my aproch completed with square and circle

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <button class="sizetext">5</button>
             <button class="increase">+</button>
             <button for="color" class="color"><input type="color" id="color" name="color"></button>
+            <button class="square">⬜</button>
+            <button class="circle">◯</button>
             <button class="clear">X</button>
         </div>
     </div>
